--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,10 @@
 @import './icons.css';
+@import './fonts.css';
+@import './body.css';
+@import './link.css';
 
 :root {
+  font-size: 16px;
   --primary: #00B050;
   --white: #FFFFFF;
   --gray10: #B3B3B3;
@@ -9,8 +13,11 @@
   --gray40: #181818;
   --gray50: #121212;
   --gray60: #000000;
-}
-
-body {
-  background-color: #00B050;
+  --baseFontFamily: Avenir, Helvetica, sans-serif;
+  --headLine1: bold 2rem/normal var(--baseFontFamily);
+  --headLine2: bold 1.5rem/1.75rem var(--baseFontFamily);
+  --baseFont: normal .875rem/1.375rem var(--baseFontFamily);
+  --baseFontBold: bold .875rem/1.375rem var(--baseFontFamily);
+  --button: bold .875rem/1rem var(--baseFontFamily);
+  --small: normal .75em/normal var(--baseFontFamily)
 }
