--- a/css/index.css
+++ b/css/index.css
@@ -3,9 +3,7 @@
 @import './body.css';
 @import './link.css';
 @import './button-icon.css';
-@import './logo.css';
-@import './list.css';
-@import './menu.css';
+@import './sidebar.css';
 
 :root {
   font-size: 16px;
