--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,8 @@
 @import './sidebar.css';
 @import './ellipsis.css';
 @import './slider.css';
+@import './playerControls.css';
+@import './playerPlayback.css';
 
 :root {
   font-size: 16px;
