--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,9 @@
 @import './slider.css';
 @import './playerControls.css';
 @import './playerPlayback.css';
+@import './player-volume.css';
+@import './player.css';
+@import './nowPlaying.css';
 
 :root {
   font-size: 16px;
