--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
 @import './ellipsis.css';
 @import './slider.css';
 @import './player.css';
+@import './playlist-a.css';
 
 :root {
   font-size: 16px;
