--- a/css/playlist-b.css
+++ b/css/playlist-b.css
@@ -5,6 +5,7 @@
   overflow: hidden;
   background: rgba(255, 255, 255, .1);
   transition: .3s background;
+  /* flex-shrink: 0; de colocar éste valor aquí el elemento no quedaria predispuesto para maquetarse dentro de un contenedor block */
 }
 
 .playlistB:hover, .playlistB:focus-within{
