--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,8 @@
 @import './playlist-list.css';
 @import './search.css';
 @import './navigation.css';
+@import './header.css';
+@import './sticky.css';
 
 :root {
   font-size: 16px;
