--- a/css/index.css
+++ b/css/index.css
@@ -7,13 +7,9 @@
 @import './ellipsis.css';
 @import './slider.css';
 @import './player.css';
-@import './playlist-a.css';
-@import './playlist-b.css';
-@import './playlist-list.css';
-@import './search.css';
-@import './navigation.css';
-@import './header.css';
-@import './sticky.css';
+@import './page.css';
+@import './layout.css';
+@import './scrollbar.css';
 
 :root {
   font-size: 16px;
