--- a/css/index.css
+++ b/css/index.css
@@ -29,3 +29,9 @@
   --button: bold .875rem/1rem var(--baseFontFamily);
   --small: normal .75em/normal var(--baseFontFamily)
 }
+
+@media screen and (min-width: 1366px) {
+  :root {
+    font-size: 20px;
+  }
+}
