--- a/css/playlist/playlist-details.css
+++ b/css/playlist/playlist-details.css
@@ -47,10 +47,26 @@
   color: (--gray10);
 }
 
+.playlist-bottom {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .playlist-top {
   color: var(--gray10);
+  display: flex;
+  justify-content: space-between;
+}
+
+.playlist-top-icons{
+  display: flex;
+  gap: 2.5rem;
+  margin-inline-end: 2rem;
 }
 
 .playlist-song {
   color: var(--white);
+  display: flex;
+  justify-content: space-between;
 }
