playlist stiillll goooes

--- a/css/layout-playlist.css
+++ b/css/layout-playlist.css
@@ -30,7 +30,7 @@
 }
 
 .layout-main-filter {
-  background: linear-gradient(#28282800, #282828);
+  background: linear-gradient(#73737300, #121212 60%);
 }
 
 .layout-bottom {
